Customize the post comment form

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,12 @@
     }
   }
 
+.comment-form {
+  padding: 20px;
+}
+.comment-form label {
+  display: block;
+}
   /*--------------------------------------------------------------
     Contact section start here
 --------------------------------------------------------------*/
