--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,24 @@
   }
 
 .comment-form {
-  padding: 20px;
+  padding: 0px;
 }
 .comment-form label {
   display: block;
+}
+
+.comment-form textarea {
+  width: 65%;
+  height: 80px;
+}
+
+.comment-form input[type = 'text'] {
+  width: 65%;  
+  height: 40px;
+}
+
+.comment-respond {
+  box-shadow:;
 }
   /*--------------------------------------------------------------
     Contact section start here
