--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
 */
 
 /* header section design start her */
+  body {
+    color: red:
+  }
+
   .navbar-nav li a {
     margin: 0  25px;
     color: white !important;
