Change the authon name also change the Lisense, Author and Theme URI

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /*
-    Theme Name: Learn With Sazon
-    Theme URI: https://portfolio.sazonmahmud.net/
-    Author: Team LWSAZON
-    Author URI: https://sazonmahmud.net/
+    Theme Name: LWSAZON
+    Theme URI: https://portfolio.sazonmahmud.com/
+    Author: Sazon Mahmud
+    Author URI: https://sazonmahmud.com/
     Description: Assalamu Alaikum, I am ‍Sazon Mahmud. I am an Expert WordPress Developer. I have been working in various organizations with WordPress design and development for more than 5+ years. Along with that, I also do SEO for WordPress websites. In addition to working online, I also work offline. This is my website www.sazonmahmud.net If you need any personal or Professional website for your business then feel free to contact me.
     Requires at least: 6.4
     Tested up to: 6.4
     Requires PHP: 7.0
     Version: 1.0
     License: GNU General Public License v2 or later
-    License URI: https://sazonmahmud.net/
+    License URI: https://sazonmahmud.com/
     Text Domain: lwsazon
     Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, news
 */
