--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     License: GNU General Public License v2 or later
     License URI: https://sazonmahmud.com/
     Text Domain: lwsazon
-    Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, news
+    Tags: one-column, custom-colors, custom-menu, custom-logo, editor-style, featured-images, full-site-editing, block-patterns, rtl-language-support, sticky-post, threaded-comments, translation-ready, wide-blocks, block-styles, style-variations, accessibility-ready, blog, portfolio, business, e-commerce, multivendoer , agency, newspapper etc.
 */
   
   
